--- a/dist.ini
+++ b/dist.ini
@@ -1,15 +1,17 @@
-version=0.004
+;---------------------------------
+author  = perlancar <perlancar@cpan.org>
+copyright_holder = perlancar <perlancar@cpan.org>
+license = Perl_5
+;---------------------------------
+
+version=0.001
 
 name=Plugin-System-_ModuleFeatures
 
 [@Author::PERLANCAR]
-:version=0.600
+:version=0.610
 
 [Prereqs]
-perl=5.006
 strict=0
 warnings=0
-Exporter=5.57
-List::Util=1.45
-Module::Load::Util=0
 
