[dist][bugfix] To index packages with underscore in its name, we have to set [MetaProvides::Package] configuration: include_underscores=1

--- a/dist.ini
+++ b/dist.ini
@@ -8,10 +8,14 @@ version=0.002
 
 name=Plugin-System-_ModuleFeatures
 
-[@Author::PERLANCAR]
+[@Filter]
+bundle=@Author::PERLANCAR
 :version=0.610
+remove=MetaProvides::Package
+
+[MetaProvides::Package]
+include_underscores=1
 
 [Prereqs]
 strict=0
 warnings=0
-
